# Market-Efficient-Transfer-Matrix

./: .coverage  .coveragerc  .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .semgrep.yml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  USER_MANUAL.md  biome.json  cliff.toml  constitution.md  coverage.xml  package.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: coverage.yml  semgrep.yml
.specify/: setup
.specify/memory/: constitution.md
.specify/scripts/bash/: setup.sh
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
Speckit/: data-model.md  plan.md  spec.md  tasks.md
backend/: main.py  requirements.txt
backend/ml/: __init__.py  financial.py  pca.py  similarity.py
backend/models/: pca_cam.joblib  pca_cm.joblib  pca_fwd.joblib  pca_gk.joblib  pca_wng.joblib  player_ids_cam.json  player_ids_cm.json  player_ids_fwd.json  player_ids_gk.json  player_ids_wng.json  scaler_cam.joblib  scaler_cm.joblib  scaler_fwd.joblib  scaler_gk.joblib  scaler_wng.joblib  vectors_cam.npy  vectors_cm.npy  vectors_fwd.npy  vectors_gk.npy  vectors_wng.npy
data/mock/: mock_market_values.json
data/processed/: players_clean.csv
frontend/: index.html
specs/: README.md  feature-auth.spec.md
specs/001-my-feature/: data-model.md  plan.md  research.md  spec.md  tasks.md
